# Simple_Mail_Server_and_Client

./: README.md
server/: CMakeLists.txt  HttpClientRequestHandle.h  HttpClientRequestHandler.cpp  Server.cpp  TcpClientRequestHandler.cpp  TcpClientRequestHandler.h  email.db  index.html
